--- a/tomatomusou.vcxproj
+++ b/tomatomusou.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="DebugColliderObject.cpp" />
     <ClCompile Include="DebugDraw.cpp" />
+    <ClCompile Include="HitTomatoEffect.cpp" />
     <ClCompile Include="Gradation.cpp" />
     <ClCompile Include="GroundCollider.cpp" />
     <ClCompile Include="HitEffect.cpp" />
@@ -209,6 +210,7 @@
     <ClCompile Include="StillProjector.cpp" />
     <ClCompile Include="TimeCount.cpp" />
     <ClCompile Include="TimeUIController.cpp" />
+    <ClCompile Include="TitleConfetti.cpp" />
     <ClCompile Include="TitleGround.cpp" />
     <ClCompile Include="TitleScene.cpp" />
     <ClCompile Include="TitleTomatoWall.cpp" />
@@ -236,6 +238,7 @@
     <ClInclude Include="Component.h" />
     <ClInclude Include="DebugColliderObject.h" />
     <ClInclude Include="DebugDraw.h" />
+    <ClInclude Include="HitTomatoEffect.h" />
     <ClInclude Include="Gradation.h" />
     <ClInclude Include="GroundCollider.h" />
     <ClInclude Include="HitEffect.h" />
@@ -278,6 +281,7 @@
     <ClInclude Include="Tag.h" />
     <ClInclude Include="TimeCount.h" />
     <ClInclude Include="TimeUIController.h" />
+    <ClInclude Include="TitleConfetti.h" />
     <ClInclude Include="TitleGround.h" />
     <ClInclude Include="TitleScene.h" />
     <ClInclude Include="TitleTomatoWall.h" />
