--- a/tomatomusou.vcxproj
+++ b/tomatomusou.vcxproj
@@ -130,6 +130,7 @@
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <LanguageStandard>stdcpp14</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -210,6 +211,10 @@
     <ClCompile Include="SphereCollider.cpp" />
     <ClCompile Include="StaticHuman.cpp" />
     <ClCompile Include="StillProjector.cpp" />
+    <ClCompile Include="StopWatch.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="TimeCount.cpp" />
     <ClCompile Include="TimeUIController.cpp" />
     <ClCompile Include="TitleConfetti.cpp" />
@@ -281,6 +286,10 @@
     <ClInclude Include="SphereCollider.h" />
     <ClInclude Include="StaticHuman.h" />
     <ClInclude Include="StillProjector.h" />
+    <ClInclude Include="StopWatch.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Tag.h" />
     <ClInclude Include="TimeCount.h" />
     <ClInclude Include="TimeUIController.h" />
